--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "ES2022",
     "sourceMap": true,
     "outDir": "dist",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/index.ts"]
 }
