--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^9.0.3",
     "react-router-dom": "^6.26.1",
     "react-syntax-highlighter": "^15.6.1",
+    "react-type-animation": "^3.2.0",
     "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/react-type-animation": "^1.1.4",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
